--- a/index.html
+++ b/index.html
@@ -977,14 +977,8 @@ https://fifabd.site/OPLLXX/play.m3u8?id=34011|Referer=RANAPK
 https://mhdtvstream.com/live.php?id=815&extension=.m3u8|Referer=https://mhdtvstream.com/
 https://playyonogames.in/jiohotstar/playit.php?id=3774149&format=.m3u8|referer=https://playyonogames.in/
 https://moonkerala.xyz/jiohotstar/playit.php?id=3774149&format=.m3u8|Referer=https://moonkerala.xyz/
-#EXTINF:-1 tvg-logo="https://static.wikia.nocookie.net/logopedia/images/c/cc/Nick_Splat_2023.png/revision/latest/scale-to-width-down/250?cb=20240226050529" group-title="Cartoon",113.NICK
-http://watchindia.net:8880/49387/51659/2182
-http://xtv.ooo:8080//kamran800/800kamran/150482.ts
-http://nayeemparvez.emart.biz.id/amrbd-x/stream.php?id=NICK&e=.m3u8
-http://opplex.tv:8080/live/315587154/331264554/150482.ts
-https://mhdtvstream.com/live.php?id=545&extension=.m3u8|Referer=https://mhdtvstream.com/
-https://playyonogames.in/jiohotstar/playit.php?id=3989195&format=.m3u8|referer=https://playyonogames.in/
-https://moonkerala.xyz/jiohotstar/playit.php?id=3989195&format=.m3u8|Referer=https://moonkerala.xyz/
+#EXTINF:-1 tvg-logo="https://static.wikia.nocookie.net/logopedia/images/c/cc/Nick_Splat_2023.png/revision/latest/scale-to-width-down/250?cb=20240226050529" group-title="Cartoon",NICK BANGLA 
+https://xfireflix.ct.ws/opx/stream.php?id=150482&e=.m3u8
 #EXTINF:-1 tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsv-UEwhkmBxPuPdv7VhQ07hVTIVuvmvLb3sI3NZvQfA&s" group-title="Cartoon",114.POGO
 https://bdixtv24.site/toffee/live.php?id=38060f0d4077&e=.m3u8
 http://xtv.ooo:8080/kamran800/800kamran/150483.ts
