--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ https://app.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxI
 --------------
 #EXTINF:-1 tvg-logo="https://www.sonypicturesnetworks.com/images/logos/SET-LOGO-HD.png" tvg-id="<built-in function id>" group-title="HINDI", SONY HD
 https://starshare.org:443/live/2222/3333/144.m3u8
- #EXTINF:-1 group-title="HINDI TV" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRuw91zwmSZb0txgnWeCL3n-E1uo0kkl-Kzg&s", SONY SAB HD
+ #EXTINF:-1 group-title="HINDI" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRuw91zwmSZb0txgnWeCL3n-E1uo0kkl-Kzg&s", SONY SAB HD
 https://starshare.org:443/live/2222/3333/98853.m3u8
 
  
