--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ https://app.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxI
 https://starshare.org:443/live/2222/3333/144.m3u8
  #EXTINF:-1 group-title="HINDI" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRuw91zwmSZb0txgnWeCL3n-E1uo0kkl-Kzg&s", SONY SAB HD
 https://starshare.org:443/live/2222/3333/145.m3u8
+  #EXTINF:-1 group-title="HINDI" tvg-logo="https://yt3.googleusercontent.com/AU6M16mvllbIJosxdTX_DA8LDrrKIGsGdx1bjfYhUNSx8_UdWiVCWAvx90pXprSpWYEhxTyB=s900-c-k-c0x00ffffff-no-rj", SONY PAL
+https://starshare.org:443/live/2222/3333/6627.m3u8
 
  
 # KOLKATA Playlist :-
