--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@ https://app.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxI
 https://starshare.org:443/live/2222/3333/144.m3u8
 #EXTINF:-1 group-title="HINDI" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRuw91zwmSZb0txgnWeCL3n-E1uo0kkl-Kzg&s", SONY SAB HD
 https://starshare.org:443/live/2222/3333/145.m3u8
-#EXTINF:-1 group-title="HINDI" tvg-logo="https://yt3.googleusercontent.com/d5qlYlKtK0U4c-lkdJdC8EELLTFJQeBXJN2RLm8541xwgwM_WP28D9cV5HwXRaHE5CUrRB7M=s900-c-k-c0x00ffffff-no-rj", SONY WAH
-https://starshare.org:443/live/2222/3333/4077.m3u8
+#EXTINF:-1 group-title="HINDI" tvg-logo="https://dj7fdt04hl8tv.cloudfront.net/acm/media/njoi/zee-cinema-2.jpg", ZEE CINEAMA HD
+https://starshare.org:443/live/2222/3333/380449.m3u8
+
 
  
 # KOLKATA Playlist :-
