--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ https://app.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxI
 https://starshare.org:443/live/2222/3333/144.m3u8
 #EXTINF:-1 group-title="HINDI" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRuw91zwmSZb0txgnWeCL3n-E1uo0kkl-Kzg&s", SONY SAB HD
 https://starshare.org:443/live/2222/3333/145.m3u8
-#EXTINF:-1 group-title="HINDI" tvg-logo="https://dj7fdt04hl8tv.cloudfront.net/acm/media/njoi/zee-cinema-2.jpg", ZEE CINEAMA HD
+#EXTINF:-1 tvg-logo="https://d229kpbsb5jevy.cloudfront.net/tv/150/150/bnw/zee-cinema-white.png" group-title="HINDI",IN: ZEE CINEMA HD
 https://starshare.org:443/live/2222/3333/230.m3u8
 
 
