--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ window.location.href = "https://t.me/rslivetv";
 
 # LIVE Even :-
 --------------
-#EXTINF:-1 tvg-logo="https://i.postimg.cc/1RGSjG88/20250313-112932.jpg" tvg-id="<built-in function id>" group-title="LIVE EVEN", IPL LIVE 2025
+#EXTINF:-1 tvg-logo="https://tds-images-bn.thedailystar.net/sites/default/files/styles/big_202/public/images/2023/08/18/untitled.jpg" tvg-id="<built-in function id>" group-title="LIVE EVEN", IPL LIVE 2025
 http://103.122.74.6:8888/hls/STAR.SPORTS1.HD.m3u8
- #EXTINF:-1 group-title="LIVE EVEN " tvg-logo="https://tds-images-bn.thedailystar.net/sites/default/files/styles/big_202/public/images/2023/08/18/untitled.jpg", IPL BANGLA
-https://vkvsd82.okcdn.ru/hls/7861588855451.m3u8/sig/IHhgCEWH49Q/expires/1742810679584/srcIp/176.227.240.49/urls/185.226.53.83/clientType/14/srcAg/CHROME_ANDROID/mid/8918634539931/7861588855451_high/index.m3u8
+#EXTINF:-1 group-title="LIVE EVEN " tvg-logo="https://tds-images-bn.thedailystar.net/sites/default/files/styles/big_202/public/images/2023/08/18/untitled.jpg", IPL BANGLA
+https://xenolive.xyz/tofee/live.php?id=f4189bfa64f3f801495ad7a973334724&e=.m3u8
 #EXTINF:-1 group-title="LIVE EVEN " tvg-logo="https://i.postimg.cc/sfc07kCn/20250313-225549.png", T Sports LIVE
 https://starshare.org:443/live/2222/3333/18452.m3u8
 #EXTINF:-1 tvg-logo="https://i.postimg.cc/GpJ9JQ6M/20241005-162825.png" group-title="LIVE EVEN", GAZI TV HD
