--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ http://103.163.247.39/local_out/btv/video.m3u8?token=At5F1MFZYnciB3
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/25/logo/240x240/mobile_logo_913146001673185595.png" group-title="BANGLADESH", ASIAN TV
 https://starshare.org:443/live/2222/3333/430.m3u8
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/38/logo/240x240/mobile_logo_483871001656610198.png" group-title="BANGLADESH", ATN BANGLA 
-https://i.imgur.com/vliw4VC.mp4   
+ 
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/42/logo/240x240/mobile_logo_554709001657185722.png" group-title="BANGLADESH", ATN NEWS 
 http://103.163.247.39/local_out/atnnews/video.m3u8?token=At5F1MFZYnciB3 
 #EXTINF:-1 tvg-id="e181c0f8" tvg-name="ATN Music" tvg-logo="https://i.postimg.cc/1txRrwW7/20240925-123659.png" group-title="BANGLADESH",ATN MUSIC
@@ -75,8 +75,10 @@ http://103.163.247.39:80/local_out/channel9/video.m3u8?token=At5F1MFZYnciB3
 http://103.163.247.39/local_out/channel24/video.m3u8?token=At5F1MFZYnciB3
 #EXTINF:-1 tvg-logo="https://i.postimg.cc/PqtdhkF4/20241005-165038.png" group-title="BANGLADESH", T Sports 
 http://kst.moonplex.net:8080/CH2/index.m3u8
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://i.postimg.cc/GpJ9JQ6M/20241005-162825.png" group-title="BANGLADESH", GAZI TV HD
-http://isp.top10bhaluka.com/tv/stream.m3u8?id=GTV
+http://link_to_your_first_m3u8_stream
+https://i.imgur.com/vliw4VC.mp4  
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/365/logo/240x240/mobile_logo_731536001673438371.png" group-title="BANGLADESH", NAGORIK TV
 http://103.122.74.6:8888/hls/NAGORIK.TV.HD.m3u8
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/53/logo/240x240/mobile_logo_107276001655890949.png" group-title="BANGLADESH", EKATTOR TV HD
