--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@ http://filex.tv:8080/sam2233/sam7766/497310
 http://103.163.247.39/local_out/btv/video.m3u8?token=At5F1MFZYnciB3
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/25/logo/240x240/mobile_logo_913146001673185595.png" group-title="BANGLADESH", ASIAN TV
 https://starshare.org:443/live/2222/3333/430.m3u8
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/38/logo/240x240/mobile_logo_483871001656610198.png" group-title="BANGLADESH", ATN BANGLA 
- 
+http://link_to_your_first_m3u8_stream
+https://i.imgur.com/vliw4VC.mp4
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/42/logo/240x240/mobile_logo_554709001657185722.png" group-title="BANGLADESH", ATN NEWS 
 http://103.163.247.39/local_out/atnnews/video.m3u8?token=At5F1MFZYnciB3 
 #EXTINF:-1 tvg-id="e181c0f8" tvg-name="ATN Music" tvg-logo="https://i.postimg.cc/1txRrwW7/20240925-123659.png" group-title="BANGLADESH",ATN MUSIC
