--- a/index.html
+++ b/index.html
@@ -26,20 +26,31 @@ http://103.122.74.6:8888/hls/WILLOW.HD.m3u8
 
 # BANGLADESH Playlist :-
  -----------------------
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/63/logo/240x240/mobile_logo_118855001673182388.png" group-title="BANGLADESH", BTV HD
 http://filex.tv:8080/sam2233/sam7766/497310
+https://i.imgur.com/vliw4VC.mp4
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9HgpZyCd4i2qjJVq2kFc6_g-7neCSBRKBN_Jswic9qJayoeJiNgS1T88&s=10" group-title="BANGLADESH", BTV NEWS HD
 http://103.163.247.39/local_out/btv/video.m3u8?token=At5F1MFZYnciB3
+https://i.imgur.com/vliw4VC.mp4
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/25/logo/240x240/mobile_logo_913146001673185595.png" group-title="BANGLADESH", ASIAN TV
 https://starshare.org:443/live/2222/3333/430.m3u8
+https://i.imgur.com/vliw4VC.mp4
+
 #EXTM3U
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/38/logo/240x240/mobile_logo_483871001656610198.png" group-title="BANGLADESH", ATN BANGLA 
 http://link_to_your_first_m3u8_stream
 https://i.imgur.com/vliw4VC.mp4
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://images.toffeelive.com/images/program/42/logo/240x240/mobile_logo_554709001657185722.png" group-title="BANGLADESH", ATN NEWS 
 http://103.163.247.39/local_out/atnnews/video.m3u8?token=At5F1MFZYnciB3 
+https://i.imgur.com/vliw4VC.mp4
+#EXTM3U
 #EXTINF:-1 tvg-id="e181c0f8" tvg-name="ATN Music" tvg-logo="https://i.postimg.cc/1txRrwW7/20240925-123659.png" group-title="BANGLADESH",ATN MUSIC
 https://app.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxIZTO0U0ezN1IzMyfvcGVMZEJCTEFWeVN3PTOmdFsaWRtaW51aiPhnPTI2/atnmusic.stream/playlist.m3u8
+https://i.imgur.com/vliw4VC.mp4
 #EXTINF:-1 tvg-logo="https://i.postimg.cc/W36VmKqt/20240925-124304.png" group-title="BANGLADESH", ATN ISLAMIC
 https://app.ncare.live/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxIZTO0U0ezN1IzMyfvcGVMZEJCTEFWeVN3PTOmdFsaWRtaW51aiPhnPTI2/atnislamictv.stream/playlist.m3u8
 #EXTINF:-1 tvg-logo="https://i.postimg.cc/zvHxJgsD/20250312-212636.png" group-title="BANGLADESH", Channel i
@@ -130,8 +141,10 @@ https://starshare.org:443/live/2222/3333/230.m3u8
 https://starshare.org:443/live/2222/3333/144.m3u8
 #EXTINF:-1 group-title="HINDI" tvg-logo="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRuw91zwmSZb0txgnWeCL3n-E1uo0kkl-Kzg&s", SONY SAB HD
 https://starshare.org:443/live/2222/3333/145.m3u8
+#EXTM3U
 #EXTINF:-1 tvg-logo="https://d229kpbsb5jevy.cloudfront.net/tv/150/150/bnw/zee-cinema-white.png" group-title="HINDI",IN: ZEE CINEMA HD
 https://starshare.org:443/live/2222/3333/230.m3u8
+https://i.imgur.com/vliw4VC.mp4 
 
 
  
